fix collaborator list spacing pt 2

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -302,7 +302,7 @@ td.shared_list
       margin: 0 0 0 -4px
       line-height: 1.2
       border-bottom: 1px solid #eee
-      height: 23px
+      min-height: 23px
       position: relative
       &:hover
         cursor: url(https://mail.google.com/mail/images/2/openhand.cur), move !important
@@ -499,6 +499,7 @@ td.shared_list
           margin: 0
           cursor: default !important
           font-size: 10px
+          min-height: 0
           height: 14px
           line-height: 1
           position: relative
